# Calculator

./: .gitignore  .gitmodules  CLAUDE.md  build.gradle  eraser.md  logcat.bat  patito-re.txt  patito.txt  patoLoco.txt  settings.gradle  triangle.ppm
app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/assets/fonts/: font.msdf
app/src/main/assets/shaders/: coverage.spv  msdf_frag.spv  tiling.spv  triangle.frag  triangle.vert  triangle.vert.spv
app/src/main/cpp/: app.cc  app.hh  calculator.cc  glyphs.cc  glyphs.hh  main.cc  mathbox.cc  mathbox.hh  mathlayout.cc  mathlayout.hh  renderer.cc  renderer.hh  saf_bridge.cc  saf_bridge.hh  ui.cc  ui.hh
app/src/main/java/io/nava/calculator/: MainActivity.java
app/src/main/shaders_src/: common.slang  composite_vert.slang  coverage.slang  tiling.slang
core/calc/: calc.cc  calc.hh  editor.cc  editor.hh
core/cas/: cas.hh  cas_worker.cc  cas_worker.hh  eigenmath_engine.cc  eigenmath_engine.hh  symbolic_engine.cc  symbolic_engine.hh
core/cas/eigenmath/: eigenmath.c
core/db/: json.hh  store.cc  store.hh
core/graphing/: equation.hh  plot.cc  plot.hh
core/math/: ast.hh  evaluator.hh  lexer.cc  lexer.hh  numeric_evaluator.cc  numeric_evaluator.hh  parser.cc  parser.hh
latexExample/: equations.txt  render_math.py
